--- a/css/homepage/home.css
+++ b/css/homepage/home.css
@@ -64,7 +64,34 @@ button{
     margin-left: 45%;
     margin-top:3%;
     position: absolute;
+    animation:revolve 10s infinite
 }
+
+@keyframes revolve{
+    0%{
+        transform:rotate(30deg);
+        margin-left: 2%;
+    }
+    25%
+    {
+        transform:rotate(90deg);
+        margin-left: 20%;
+    }
+    50%
+    {
+        transform:rotate(180deg);
+        margin-left: 40%;
+    }
+    75%{
+        transform:rotate(270deg);
+        margin-left: 80%;
+    }
+    100%{
+        transform:rotate(360deg);
+        margin-left: 40%;
+    }
+}
+
 
 #logo > span{
     font-size:80px;
@@ -121,6 +148,12 @@ select{
     font-family: 'Times New Roman', Times, serif;
     margin-left:2%;
 }
+
+#quickHeading:hover{
+    font-size:40px;
+    color:black
+}
+
 #quickSubHeading{
     font-size:20px;
     color:gray;
@@ -136,6 +169,23 @@ select{
     margin-left:2%;
     margin-top:3%;
     box-shadow: 10px 20px 5px gray;
+    animation:dance 10s infinite
+}
+
+@keyframes dance{
+    0% {transform: rotate(-5deg)}
+    25% {transform: rotate(0deg)}
+    50% {transform: rotate(5deg)}
+    75% {transform: rotate(0deg)}
+    100% {transform: rotate(-5deg)}
+}
+
+.tileContainer:hover{
+    /* transform: scale(1.1); */
+    /* transform: skewX(20deg); */
+    /* transform: rotate(60deg); */
+    /* transform: translate(100px, 100px); */
+    transform: scale(1.1);
 }
 
 .tileComponent1{
@@ -191,4 +241,86 @@ Footer{
 .socialIcon{
     height:50px;
     width:50px
+}
+
+@media screen and (max-width:1600px){
+    body{
+        background-color: rgb(240, 187, 196);
+    }
+}
+
+@media screen and (max-width:1400px){
+    body{
+        background-color: rgb(234, 190, 240);
+    }
+}
+
+@media screen and (max-width:1200px){
+    body{
+        background-color: rgb(141, 239, 239)
+    }
+    #heading{
+        margin-left: 25%;
+        margin-top:20%;
+    }
+    .dropdown{
+        margin-left: 30%;
+        margin-top: 30%;
+    }
+
+}
+
+@media screen and (max-width:1000px){
+    body{
+        background-color: rgb(240, 232, 175)
+    }
+    .tileContainer{
+        width: 45%;
+    }
+    #heading {
+        margin-top: 31%;
+        font-size: 45px;
+    }
+     .dropdown{
+        margin-top: 42%;
+    }
+}
+
+@media screen and (max-width:948px){
+
+    #heading {
+        margin-top: 20%;
+        font-size: 45px;
+    }
+     .dropdown{
+        margin-top: 32%;
+    }
+}
+
+@media screen and (max-width:800px){
+    body{
+        background-color: rgb(175, 240, 197)
+    }
+}
+
+@media screen and (max-width:600px){
+    body{
+        background-color: rgb(211, 237, 176)
+    }
+    .tileContainer{
+        width: 100%;
+    }
+    #logo{
+        margin-left:30%
+    }
+    #heading {
+        margin-top: 46%;
+        margin-left: 0%;
+        font-size: 39px;
+    }
+    .dropdown {
+        margin-left: 0%;
+        width:100%;
+        margin-top: 65%;
+    }
 }
